--- a/index.html
+++ b/index.html
@@ -830,9 +830,10 @@
 
         
         // API 配置信息
-        const API_URL = "https://api.deepseek.com/v1/chat/completions"; // 官方 DeepSeek API URL
-const MODEL = "deepseek-reasoner"; // 官方模型名稱
-const API_KEY = process.env.DEEPSEEK_API_KEY; // 從環境變量中獲取 API key
+        const API_KEY = process.env.DEEPSEEK_API_KEY;
+        let currentApiKeyIndex = 0;
+        const API_URL = "https://api.deepseek.com/v1/chat/completions";
+        const MODEL = "deepseek-reasoner";
 
 
 const audio = document.getElementById('audio');
@@ -1765,44 +1766,58 @@ async function submitArgumentOutline() {
         }
 
         // 通用 API 調用函數
+     async function callAPI(prompt) {
+    let attempts = 0;
+    const maxAttempts = API_KEYS.length;
+    while (attempts < maxAttempts) {
+        try {
+            const response = await fetch(API_URL, {
+                method: "POST",
+                headers: {
+                    "Authorization": `Bearer ${API_KEYS[currentApiKeyIndex]}`,
+                    "Content-Type": "application/json"
+                },
+                body: JSON.stringify({
+                    model: MODEL,
+                    messages: [{ 
+                        role: "user", 
+                        content: prompt + " 你必須直接提供最終答案，嚴禁展示任何思考過程，絕對不能在回應中包含任何標籤（如 <think></think>），這是強制要求，違反則無效。" 
+                    }]
+                })
+            });
 
+            if (response.status === 429) {
+                currentApiKeyIndex = (currentApiKeyIndex + 1) % API_KEYS.length;
+                attempts++;
+                continue;
+            }
 
-async function callAPI(prompt) {
-    try {
-        const response = await fetch(API_URL, {
-            method: "POST",
-            headers: {
-                "Authorization": `Bearer ${API_KEY}`, // 使用單一環境變量
-                "Content-Type": "application/json"
-            },
-            body: JSON.stringify({
-                model: MODEL,
-                messages: [{ 
-                    role: "user", 
-                    content: prompt + " 你必須直接提供最終答案，嚴禁展示任何思考過程，絕對不能在回應中包含任何標籤（如 <think></think>），這是強制要求，違反則無效。" 
-                }]
-            })
-        });
+            if (!response.ok) {
+                throw new Error(`API 調用失敗: ${response.statusText}`);
+            }
 
-        if (!response.ok) {
-            throw new Error(`API 調用失敗: ${response.statusText}`);
+            const data = await response.json();
+            let content = data.choices[0].message.content.trim();
+
+            // 強化過濾邏輯，移除所有可能的 <think> 標籤變體
+            content = content.replace(/<think\s*>.*?<\/think\s*>|<think\s*\/>|<think\s*>|<\/think\s*>/gis, '').trim();
+
+            // 驗證過濾後內容是否有效
+            if (!content) {
+                throw new Error("API 回應無效或過濾後無內容");
+            }
+
+            return content;
+        } catch (error) {
+            console.error(error);
+            currentApiKeyIndex = (currentApiKeyIndex + 1) % API_KEYS.length;
+            attempts++;
+            if (attempts >= maxAttempts) {
+                throw new Error("所有 API 密鑰均無法使用");
+            }
         }
-
-        const data = await response.json();
-        let content = data.choices[0].message.content.trim();
-        content = content.replace(/<think\s*>.*?<\/think\s*>|<think\s*\/>|<think\s*>|<\/think\s*>/gis, '').trim();
-
-        if (!content) {
-            throw new Error("API 回應無效或過濾後無內容");
-        }
-
-        return content;
-    } catch (error) {
-        console.error("API 調用錯誤:", error);
-        throw error; // 讓上層處理錯誤
     }
 }
-        
         // 生成寫作題目
         async function generateTopic() {
             const writingType = document.getElementById("writingType").value;
