--- a/index.html
+++ b/index.html
@@ -1764,7 +1764,7 @@ async function submitArgumentOutline() {
 const MODEL = "deepseek-reasoner"; // 保留模型名稱
         
 async function callAPI(prompt) {
-  const proxyUrl = 'https://v0-new-project-dbxbq2jdjbp-2lcizzjdw-kcs-projects-5b85a9f8.vercel.app/'; // 替換為你的 Vercel 項目 URL
+  const proxyUrl = 'https://v0-new-project-dbxbq2jdjbp-2lcizzjdw-kcs-projects-5b85a9f8.vercel.app/api/proxy'; // 替換為你的 Vercel 項目 URL
 
   try {
     const response = await fetch(proxyUrl, {
