--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html>
 <html lang="zh">
 <head>
@@ -828,6 +827,15 @@
     <script>
 
 
+
+        
+        // API 配置信息
+        const API_KEYS = [
+            "sk-82667ce9ad2a443b861523ef64f811ff"
+        ];
+        let currentApiKeyIndex = 0;
+        const API_URL = "https://api.deepseek.com/v1/chat/completions";
+        const MODEL = "deepseek-reasoner";
 
 
 const audio = document.getElementById('audio');
@@ -1761,31 +1769,57 @@ async function submitArgumentOutline() {
 
         // 通用 API 調用函數
      async function callAPI(prompt) {
-  const API_URL = "https://v0-new-project-dbxbq2jdjbp-bmjjmhog8-kcs-projects-5b85a9f8.vercel.app/api/chat"; // 替換為你的Vercel項目URL
+    let attempts = 0;
+    const maxAttempts = API_KEYS.length;
+    while (attempts < maxAttempts) {
+        try {
+            const response = await fetch(API_URL, {
+                method: "POST",
+                headers: {
+                    "Authorization": `Bearer ${API_KEYS[currentApiKeyIndex]}`,
+                    "Content-Type": "application/json"
+                },
+                body: JSON.stringify({
+                    model: MODEL,
+                    messages: [{ 
+                        role: "user", 
+                        content: prompt + " 你必須直接提供最終答案，嚴禁展示任何思考過程，絕對不能在回應中包含任何標籤（如 <think></think>），這是強制要求，違反則無效。" 
+                    }]
+                })
+            });
 
-  try {
-    const response = await fetch(API_URL, {
-      method: "POST",
-      headers: {
-        "Content-Type": "application/json"
-      },
-      body: JSON.stringify({ prompt })
-    });
+            if (response.status === 429) {
+                currentApiKeyIndex = (currentApiKeyIndex + 1) % API_KEYS.length;
+                attempts++;
+                continue;
+            }
 
-    if (!response.ok) {
-      throw new Error(`API 調用失敗: ${response.statusText}`);
+            if (!response.ok) {
+                throw new Error(`API 調用失敗: ${response.statusText}`);
+            }
+
+            const data = await response.json();
+            let content = data.choices[0].message.content.trim();
+
+            // 強化過濾邏輯，移除所有可能的 <think> 標籤變體
+            content = content.replace(/<think\s*>.*?<\/think\s*>|<think\s*\/>|<think\s*>|<\/think\s*>/gis, '').trim();
+
+            // 驗證過濾後內容是否有效
+            if (!content) {
+                throw new Error("API 回應無效或過濾後無內容");
+            }
+
+            return content;
+        } catch (error) {
+            console.error(error);
+            currentApiKeyIndex = (currentApiKeyIndex + 1) % API_KEYS.length;
+            attempts++;
+            if (attempts >= maxAttempts) {
+                throw new Error("所有 API 密鑰均無法使用");
+            }
+        }
     }
-
-    const data = await response.json();
-    return data.result;
-  } catch (error) {
-    console.error(error);
-    throw new Error("API 調用失敗");
-  }
 }
-
-
-        
         // 生成寫作題目
         async function generateTopic() {
             const writingType = document.getElementById("writingType").value;
