--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="zh">
 <head>
@@ -831,11 +832,11 @@
         
         // API 配置信息
         const API_KEYS = [
-            "sk-82667ce9ad2a443b861523ef64f811ff"
+            "sk-MoqwsgO8P9MEoCrftvdSYA"
         ];
         let currentApiKeyIndex = 0;
-        const API_URL = "https://api.deepseek.com/v1/chat/completions";
-        const MODEL = "deepseek-reasoner";
+        const API_URL = "https://chatapi.akash.network/api/v1/chat/completions";
+        const MODEL = "DeepSeek-R1";
 
 
 const audio = document.getElementById('audio');
