--- a/index.html
+++ b/index.html
@@ -1760,59 +1760,30 @@ async function submitArgumentOutline() {
         }
 
         // 通用 API 調用函數
-     async function callAPI(prompt) {
-    let attempts = 0;
-    const maxAttempts = API_KEYS.length;
-    while (attempts < maxAttempts) {
-        try {
-            async function callAPI(prompt) {
+
+async function callAPI(prompt) {
   try {
     const response = await fetch('/api/deepseek', {
       method: 'POST',
       headers: {
         'Content-Type': 'application/json'
       },
-                body: JSON.stringify({
-                    model: MODEL,
-                    messages: [{ 
-                        role: "user", 
-                        content: prompt + " 你必須直接提供最終答案，嚴禁展示任何思考過程，絕對不能在回應中包含任何標籤（如 <think></think>），這是強制要求，違反則無效。" 
-                    }]
-                })
-            });
+      body: JSON.stringify({ prompt })
+    });
 
-            if (response.status === 429) {
-                currentApiKeyIndex = (currentApiKeyIndex + 1) % API_KEYS.length;
-                attempts++;
-                continue;
-            }
-
-            if (!response.ok) {
-                throw new Error(`API 調用失敗: ${response.statusText}`);
-            }
-
-            const data = await response.json();
-            let content = data.choices[0].message.content.trim();
-
-            // 強化過濾邏輯，移除所有可能的 <think> 標籤變體
-            content = content.replace(/<think\s*>.*?<\/think\s*>|<think\s*\/>|<think\s*>|<\/think\s*>/gis, '').trim();
-
-            // 驗證過濾後內容是否有效
-            if (!content) {
-                throw new Error("API 回應無效或過濾後無內容");
-            }
-
-            return content;
-        } catch (error) {
-            console.error(error);
-            currentApiKeyIndex = (currentApiKeyIndex + 1) % API_KEYS.length;
-            attempts++;
-            if (attempts >= maxAttempts) {
-                throw new Error("所有 API 密鑰均無法使用");
-            }
-        }
+    if (!response.ok) {
+      throw new Error(`API 調用失敗: ${response.statusText}`);
     }
+
+    const data = await response.json();
+    return data.choices[0].message.content.trim();
+  } catch (error) {
+    console.error(error);
+    throw new Error("API 調用失敗");
+  }
 }
+
+        
         // 生成寫作題目
         async function generateTopic() {
             const writingType = document.getElementById("writingType").value;
