--- a/index.html
+++ b/index.html
@@ -2445,7 +2445,7 @@ async function submitArgumentOutline() {
     </script>
 
 <footer class="copyright-footer">
-        <p>Copyright © 2025 陳大文. All rights reserved.</p>
+        <p>Copyright © 2025 陳冠健. All rights reserved.</p>
     </footer>
 
 
