--- a/index.html
+++ b/index.html
@@ -575,6 +575,7 @@
 </div>
 
 <button id="beishuBtn" style="background-color: #c39bd3;">⏱背書神器</button>
+    <button id="sansiBtn" style="background-color: #5e93cc;">🖥️神思(備用）</button>
 </div>
     
    <!-- 範疇選擇 -->
@@ -1128,7 +1129,9 @@ document.getElementById("beishuBtn").addEventListener("click", function() {
     window.open("https://kenchan20141.github.io/timer/", "_blank");
 });
 
-
+document.getElementById("sansiBtn").addEventListener("click", function() {
+    window.open("https://kenchan20141.github.io/AIChinese/", "_blank");
+});
 
 document.getElementById("yuyiluBtn").addEventListener("click", function(event) {
     const menu = document.getElementById("yuyiluMenu");
