--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
         </tr>
 
 <tr>
-            <td>語奕錄</td>
+            <td>語弈錄</td>
             <td>一款同時提供單機及線上對戰模式的遊戲，題目範圍涵蓋初中測考課文及高中十二篇範文。</td>
         </tr>
 <tr>
@@ -563,7 +563,7 @@
     <button id="ocrBtn" style="background-color: #fd7e14;">✍手寫文字轉換電腦文字</button>
 <button id="zhiyunBtn" style="background-color: #5d6d7e;">☁️帙雲</button>
 <button id="selfLearningBtn" style="background-color: #20c997;">📖自學資源</button>
-<button id="yuyiluBtn" style="background-color: #a9cce3;">🎮語奕錄</button>
+<button id="yuyiluBtn" style="background-color: #a9cce3;">🎮語弈錄</button>
 
 <div id="yuyiluMenu" style="display: none; position: absolute; background: white; border: 1px solid #ccc; padding: 10px;">
     <a href="https://kenchan20141.github.io/f1chinese/" target="_blank">中一</a><br>
