--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@ opacity: 0;
     </div>
 
 <button id="beishuBtn" style="background-color: #c39bd3;">⏱背書神器</button>
-<button id="sansiBtn" style="background-color: #5e93cc;">🖥️神思(主網）</button>
+<button id="sansiBtn" style="background-color: #5e93cc;">🖥️神思(備用）</button>
 </div>
        <button id="closeToolsBtn"><i class="fas fa-times"></i></button>
     </div>
