--- a/index.html
+++ b/index.html
@@ -1925,27 +1925,29 @@ async function submitArgumentOutline() {
             }
         }
 
-        // 通用 API 調用函數
-    async function callAPI(prompt) {
-  try {
-    const response = await fetch('/api/deepseek', {
-      method: 'POST',
-      headers: {
-        'Content-Type': 'application/json'
-      },
-      body: JSON.stringify({ prompt, max_tokens: 8192 })
-    });
 
-    if (!response.ok) {
-      throw new Error(`API 調用失敗: ${response.statusText}`);
+function splitPrompt(prompt, maxLength) {
+    const segments = [];
+    for (let i = 0; i < prompt.length; i += maxLength) {
+        segments.push(prompt.slice(i, i + maxLength));
     }
-
-    const data = await response.json();
-    return data.choices[0].message.content.trim();
-  } catch (error) {
-    console.error("API 調用錯誤:", error);
-    throw new Error("API 調用失敗");
-  }
+    return segments;
+}
+        
+async function callAPI(prompt) {
+    const maxLength = 2000; // 根據API限制調整
+    const segments = splitPrompt(prompt, maxLength);
+    const results = [];
+    for (const segment of segments) {
+        const response = await fetch('/api/deepseek', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ prompt: segment, max_tokens: 8192 })
+        });
+        const data = await response.json();
+        results.push(data.choices[0].message.content.trim());
+    }
+    return results.join(''); // 合併結果
 }
 
         
