--- a/index.html
+++ b/index.html
@@ -1227,7 +1227,7 @@ document.getElementById("beishuBtn").addEventListener("click", function() {
 
 
 document.getElementById("sansiBtn").addEventListener("click", function() {
-    window.open("https://sansi.vercel.app/", "_blank");
+    window.open("https://kenchan20141.github.io/AIChinese/", "_blank");
 });
 
 
