--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="zh">
 <head>
@@ -1924,11 +1925,8 @@ async function submitArgumentOutline() {
             }
         }
 
-    // 假設API的請求大小限制為4096字元
-const MAX_LENGTH = 8192;
-
-// 通用API調用函數
-async function callAPI(prompt) {
+        // 通用 API 調用函數
+    async function callAPI(prompt) {
   try {
     const response = await fetch('/api/deepseek', {
       method: 'POST',
@@ -1939,40 +1937,17 @@ async function callAPI(prompt) {
     });
 
     if (!response.ok) {
-      throw new Error(`API調用失敗: ${response.statusText}`);
+      throw new Error(`API 調用失敗: ${response.statusText}`);
     }
 
     const data = await response.json();
     return data.choices[0].message.content.trim();
   } catch (error) {
-    console.error("API調用錯誤:", error);
-    throw new Error("API調用失敗");
+    console.error("API 調用錯誤:", error);
+    throw new Error("API 調用失敗");
   }
 }
 
-// 提交內容函數，加入長度限制和分割邏輯
-async function submitContent(content) {
-  if (content.length > MAX_LENGTH) {
-    const parts = [];
-    for (let i = 0; i < content.length; i += MAX_LENGTH) {
-      parts.push(content.slice(i, i + MAX_LENGTH));
-    }
-    const results = await Promise.all(parts.map(part => callAPI(part)));
-    return results.join("");
-  }
-  return callAPI(content);
-}
-
-// 示例使用
-async function exampleUsage() {
-  const longContent = "您的長輸入內容..."; // 替換為實際的長輸入內容
-  try {
-    const result = await submitContent(longContent);
-    console.log(result);
-  } catch (error) {
-    console.error("提交內容時出錯:", error);
-  }
-}
         
         // 生成寫作題目
         async function generateTopic() {
@@ -2639,7 +2614,7 @@ async function exampleUsage() {
     </script>
 
 <footer class="copyright-footer">
-        <p>Copyright © 2025 陳. All rights reserved.</p>
+        <p>Copyright © 2025 陳冠健. All rights reserved.</p>
     </footer>
 
 
